--- a/competences.html
+++ b/competences.html
@@ -15,7 +15,7 @@
         <a href="projets.html" class="a">Mes Projets réalisés</a>
         <a href="portfolio.html" class="a">Mon portfolio</a>
         <a href="contact.html" class="a">Contactez-moi</a>
-        <button class="button"><a href="version_anglais/competences.html">EN</a></button>
+        <button class="button"><a href="version_anglais/competences.html">ENGLISH</a></button>
     </div>
 </header>
 <h1>Mes Compétences</h1>
