--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="projets.html" class="a">Mes Projets réalisés</a>
             <a href="portfolio.html" class="a">Mon portfolio</a>
             <a href="contact.html" class="a">Contactez-moi</a>
-            <button class="button"><a href="version_anglais/index.html">EN</a></button>
+            <button class="button"><a href="version_anglais/index.html">ENGLISH</a></button>
         </div>
 </header>
 </nav>
@@ -36,7 +36,7 @@
                 mes compétences et mon goût de challenge.</p>
                 </div>
                 <div class="partie_droite">
-                    <button class="boutton"><a href="CV_hatem_kenza.pdf" download>Voir Mon CV</a></button>
+                    <button class="boutton"><a href="CV_hatem_kenza.pdf" download>Télécharger Mon CV</a></button>
                 </div>
                 <div class="partie_gauche">
                     <h2>Plus sur mes intérêts</h2>
