--- a/projets.html
+++ b/projets.html
@@ -15,7 +15,7 @@
             <a href="projets.html" class="a">Mes Projets réalisés</a>
             <a href="portfolio.html" class="a">Mon portfolio</a>
             <a href="contact.html" class="a">Contactez-moi</a>
-            <button class="button"><a href="version_anglais/projets.html">EN</a></button>
+            <button class="button"><a href="version_anglais/projets.html">ENGLISH</a></button>
         </div>
 </header>
 <h1>Mes Projets réalisés</h1>
