--- a/version_anglais/contact.html
+++ b/version_anglais/contact.html
@@ -15,7 +15,7 @@
             <a href="projets.html" class="a">My projects</a>
             <a href="portfolio.html" class="a">My portfolio</a>
             <a href="contact.html" class="a">Contact me</a>
-            <button class="button"><a href="../contact.html">FR</a></button>
+            <button class="button"><a href="../contact.html">FRENCH</a></button>
         </div>
 </header>
     <h1>Contact Me</h1>
