--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 mes compétences et mon goût de challenge.</p>
                 </div>
                 <div class="partie_droite">
-                    <button class="boutton"><a href="CV_hatem_kenza.pdf" download>Télécharger Mon CV</a></button>
+                    <button class="boutton"><a href="CV_kenza_hatem__.pdf" download>Télécharger Mon CV</a></button>
                 </div>
                 <div class="partie_gauche">
                     <h2>Plus sur mes intérêts</h2>
