--- a/version_anglais/index.html
+++ b/version_anglais/index.html
@@ -28,7 +28,7 @@
             I am independent and enthusiastic. My first year in the Computer Science Bachelor's program allowed me to strengthen my knowledge and grasp various tools and techniques in the field. In search of new challenges, I aspire to join an organisation where i can contribute my skills and passion for challenges.</p>
                 </div>
                 <div class="partie_droite">
-                    <button class="boutton"><a href="../CV_hatem_kenza.pdf" download>Download my CV</a></button>
+                    <button class="boutton"><a href="../cv__english_kenza_hatem.pdf" download>Download my CV</a></button>
                 </div>
                 <div class="partie_gauche">
                     <h2>More about my interests</h2>
